<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2015 Google Inc. All rights reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>

    <string name="changelog_message">Switch to ExoPlayer backend for video playback, and modernize dependencies.</string>

    <string name="action_settings">Settings</string>
    <string name="app_name">RepCast</string>
    <string name="app_id">CB2D44C5</string>

    <string name="cast_app_name">GoogleCastPlayer</string>
    <string name="media_route_menu_title">Play on&#8230;</string>
    <string name="list_of_videos">Select a Video Clip</string>
    <string name="casting_to_device">Casting to %1$s</string>
    <string name="ok">OK</string>
    <string name="no_device">(No Device Selected)</string>
    <string name="error">Error</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="loading">Loading&#8230;</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">CastVideos: %1$s, CCL: %2$s</string>
    <string name="session_reconnection_attempt">Attempting to recover previous session&#8230;</string>

    <!-- Error messages -->
    <!-- onApplicationConnectionFailed() errors -->
    <string name="failed_to_set_volume">Failed to set the volume</string>
    <string name="failed_to_launch_app">Failed to launch application</string>
    <string name="failed_to_set_mute">Failed to adjust the volume mute</string>
    <string name="failed_to_find_app">The application you are trying to launch is not available on your Chromecast device</string>
    <string name="failed_app_launch_timeout">The request to launch the application has timed out!</string>
    <string name="failed_to_play">Failed to start the playback of media</string>
    <string name="failed_to_pause">Failed to pause the playback of media</string>
    <string name="failed_to_connect">Could not connect to the device</string>
    <string name="failed_to_seek">Failed to seek to the specified position on the remote device</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_unaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="connection_temp_lost">Connection to the cast device is temporarily lost</string>
    <string name="connection_recovered">Connection to the cast device is recovered</string>
    <string name="connection_lost_retry">Connection to the cast device has been temporarily lost. Application is trying to recover connection, please try again later</string>
    <string name="connection_lost">No connection to the cast device exist</string>
    <string name="failed_to_perform_action">Sorry, ran into issues performing the task you wanted</string>
    <string name="oops">Oops</string>

    <!-- Preferences -->
    <string name="prefs_header_application">Application Behavior</string>
    <string name="prefs_header_application_summary">Control how the application behaves on the TV</string>
    <string name="prefs_termination_policy_default">0</string>
    <string name="prefs_termination_policy_dialog_title">When Disconnecting</string>
    <string name="prefs_volume_title">Volume Assignment</string>
    <string name="prefs_volume_title_summary">Controls %1$s</string>
    <string name="prefs_volume_dialog_title">Volume Assignment</string>
    <string name="prefs_volume_default">device</string>
    <string name="title_activity_test">TestActivity</string>

    <!-- Tabs -->
    <string name="tab_videos_title">Videos</string>
    <string name="tab_music_title">Songs</string>
    <string name="tab_photos_title">Photos</string>

    <!-- ShowCaseView -->
    <string name="touch_to_cast">Touch to cast videos to your TV</string>

    <!-- Captions -->
    <string name="captions_settings">Captions Settings</string>
    <string name="captions">Captions</string>

    <!-- Queue -->
    <string name="show_queue">Show Queue</string>
    <string name="queue_list">Queue</string>
    <string name="transition_image">transition-image</string>
    <string name="queue_empty">Queue is empty!</string>
    <string name="queue_tag_item">queue-tag-item</string>
    <string name="play_now">Play Now</string>
    <string name="play_next">Play Next</string>
    <string name="add_to_queue">Add to Queue</string>
    <string name="action_clear_queue">Clear Queue</string>
    <string name="queue_item_added_to_play_next">An item was added to play next</string>
    <string name="queue_item_added_to_queue">An item was added to the queue</string>
    <string name="update_application">Update App from Repkam09.com</string>
    <string name="tab_torrent_title">Add</string>
    <string name="tab_file_title">Watch</string>
    <string name="add_torrent_initial_title">Search Torrents</string>
    <string name="torrent_size_prefix">Size:</string>
    <string name="torrent_seeders_prefix">Seeders: </string>
    <string name="torrent_confirmation_yes">Yes</string>
    <string name="torrent_confirmation_no">No</string>
    <string name="torrent_confirmation_message">Add this to the Seedbox?</string>
    <string name="torrent_confirmation_upload_succeed">"Torrent download started"</string>
    <string name="torrent_confirmation_upload_failed">"Torrent download failed to start"</string>
    <string name="youtube_confirmation_upload_succeed">"YouTube download started"</string>
    <string name="youtube_confirmation_upload_failed">"YouTube download failed to start"</string>
    <string name="empty_message_files">Tap Search to Download Files</string>
    <string name="empty_message_torents">Folder Contains no Videos</string>
    <string name="no_results_for_prefix">"No Results for: "</string>
    <string name="update_app_task_signatures_dont_match">Signatures do not match, are you running a debug version of the app?</string>
    <string name="update_app_task_no_update_avaliable">Already up to date with Repkam09.com</string>
    <string name="update_app_task_you_are_newer">You have a newer version than the server. Lucky you.</string>
    <string name="update_app_task_error_updating_burger">Error Updating RepCast</string>
    <string name="update_app_task_starting_download">Starting RepCast Download</string>

    <string name="endpoint_tor_add">https://api.repkam09.com/repcast/toradd</string>
    <string name="endpoint_youtube_add">https://api.repkam09.com/repcast/youtube/</string>
    <string name="endpoint_dirget_default">https://api.repkam09.com/repcast/spaces/getfiles/</string>
    <string name="endpoint_torsearch">https://api.repkam09.com/repcast/torsearch/</string>e


    <string name="endporint_lan">http://localcast.repkam09.com/repcast/</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="error_no_metadata">Error no metadata</string>

    <string name="configure_backend_label">Configure Secondary Backend</string>
    <string name="configure_backend_title">URL of Secondary Backend</string>
    <string name="configure_backend_message">Leave blank for default</string>
    <string name="swap_backend">Swap to %s Backend</string>
    <string name="swap_backend_default">Default</string>
    <string name="swap_backend_secondary">Secondary</string>
    <string name="configure_backend_save">Save</string>
    <string name="configure_backend_cancel">Cancel</string>

    <string name="download_from_repcast_downloading">Downloading…</string>
    <string name="download_from_repcast_yes">Download</string>
    <string name="download_from_repcast_copy_url">Copy URL</string>
    <string name="download_from_repcast_force_share">Open With</string>
    <string name="download_from_repcast_cancel">Cancel</string>
    <string name="download_from_copied_to_clipboard">URL Copied to Clipboard</string>

    <string name="notification_next">Next</string>
    <string name="notification_prev">Previous</string>

</resources>
