<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.ActionBarTheme"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/PopupTheme">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:id="@+id/activity_torrent_confirmation_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/activity_torrent_confirmation_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="match_parent"
                android:id="@+id/activity_torrent_confirmation_yes"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/torrent_confirmation_yes"
                android:textSize="15sp" />

            <Button
                android:layout_width="match_parent"
                android:id="@+id/activity_torrent_confirmation_no"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:text="@string/torrent_confirmation_no"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/activity_torrent_confirmation_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/activity_torrent_confirmation_buttons"
            android:gravity="center_horizontal"
            android:text="@string/torrent_confirmation_message"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/activity_torrent_confirmation_message"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_torrent_confirmation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"
                android:paddingBottom="5dp"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/activity_torrent_confirmation_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:paddingTop="15dp"
                android:textSize="22sp" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
